# derp-rs

./: .gitignore  Cargo.toml  README.md
doc/: README.html
src/: lib.rs  main.rs
