[package]
name = "derp"
description = "A crappy knockoff of \"grep\" that exists only as a way to teach myself Rust."
version = "0.1.0"
authors = ["Evan Williams <evan.williams@pathai.com>"]
edition = "2018"
homepage = "https://github.com/evanjpw/derp-rs"
repository = "https://github.com/evanjpw/derp-rs"
categories = ["command-line-utilities"]
readme = "README.md"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1.3.3"
walkdir = "2.3.1"
